# trainylics

./: .env  .gitignore  DEPLOY.md  README.md  STARTUP.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  functional_requirements.md  pyproject.toml  requirements.txt  test_api.py
backend/migrations/: env.py
backend/migrations/versions/: 0ed2c693904d_restore_league_fk_in_match.py  485d66f92f51_add_initial_tables.py  8c0ebc3029e9_add_xg_columns_to_match.py  efbea53f747a_add_league_team_match_player_tables.py
backend/scripts/: import_data.py  reset_db.py  verify_import.py
backend/src/app/: __init__.py  config.py  main.py  schema.py
backend/src/app/ML/: chileanfootball.py  chileanleague.ipynb
backend/src/app/controller/: admin.py  authentication.py  matches.py  notes.py  prediction.py  users.py
backend/src/app/data/: liga_chile_2025_dataset_limpio.csv
backend/src/app/model/: league.py  match.py  mixins.py  note.py  person.py  player.py  role.py  team.py  user.py  user_role.py
backend/src/app/repository/: auth_repo.py  base_repo.py  person.py  role.py  user_role.py  users.py
backend/src/app/service/: admin.py  auth_service.py  ml_service.py  users.py
frontend/: .env  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1765938131271-ca0f07f993435.mjs
frontend/src/: App.tsx  globals.css  main.tsx
frontend/src/components/: match-results.tsx  notes-board.tsx  prediction-card.tsx  stats-overview.tsx
frontend/src/pages/: AdminUsers.tsx  Home.tsx  Login.tsx  Register.tsx
(+3 files in other folders)
